--- a/AR-Table-Tennis/AR-Table-Tennis/Info.plist
+++ b/AR-Table-Tennis/AR-Table-Tennis/Info.plist
@@ -28,6 +28,7 @@
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
+		<string>arkit</string>
 		<string>armv7</string>
 	</array>
 	<key>UIRequiresFullScreen</key>
